[package]
name = "duration-str"
version = "0.6.0"
authors = ["baoyachi <liaoymxsdl@gmail.com>"]
edition = "2021"
description = "duration string parser"
keywords = ["duration", "time", "duration-string", "duration-parser", "time-parser"]
readme = "README.md"
categories = ["parsing", "date-and-time"]
repository = "https://github.com/baoyachi/duration-str"
license = "MIT Or Apache-2.0"

[features]
default = ["chrono", "serde", "time"]

[dependencies]
nom = "7.1.1"
thiserror = "1.0.37"
chrono = { version = "0.4.23", optional = true }
time = { version = "0.3.17", optional = true }

serde = { version = "1.0.147", features = ["derive"], optional = true }
rust_decimal = { version = "1.29.1", default-features = false }

[dev-dependencies]
serde_json = { version = "1.0.87" }

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true

[[example]]
name = "deserialize_duration"
required-features = ["serde"]

[[example]]
name = "deserialize_duration_chrono"
required-features = ["chrono", "serde"]

[[example]]
name = "deserialize_duration_time"
required-features = ["time", "serde"]
