[package]
name = "duration-str"
version = "0.12.0"
authors = ["baoyachi <liaoymxsdl@gmail.com>"]
edition = "2021"
description = "duration string parser"
keywords = ["duration", "time", "duration-string", "duration-parser", "time-parser"]
readme = "README.md"
categories = ["parsing", "date-and-time"]
repository = "https://github.com/baoyachi/duration-str"
license = "Apache-2.0"
exclude = ["duration-str.png", "./playground"]

[features]
default = ["chrono", "serde", "time"]

[dependencies]
thiserror = "2.0.0"
chrono = { version = "0.4.38", optional = true, default-features = false, features = ["now"] }
time = { version = "0.3.17", optional = true, default-features = false }

serde = { version = "1.0.147", features = ["derive"], optional = true}
rust_decimal = { version = "1.29.1", default-features = false }
winnow = "0.6.8"

[dev-dependencies]
serde_json = { version = "1.0.87" }
criterion = "0.5"

[[bench]]
name = "parser_benchmark"
harness = false

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true

[[example]]
name = "deserialize_duration"
required-features = ["serde"]

[[example]]
name = "deserialize_duration_chrono"
required-features = ["chrono", "serde"]

[[example]]
name = "deserialize_duration_time"
required-features = ["time", "serde"]
