[package]
name = "duration-wasm"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
duration-str = { path = "../../"}
serde-wasm-bindgen = "0.5"
serde_json = "1.0.108"
wasm-bindgen = "0.2.92"
shadow-rs = { version = "0.28.0", default-features = false, features = ["tzdb"] }

[build-dependencies]
shadow-rs = { version = "0.28.0", default-features = false, features = ["tzdb"] }


[package.metadata.wasm-pack.profile.release]
wasm-opt = false